[package]
name = "pkg-gentoo"
version = "0.0.8"
authors = ["Ash <ValleyKnight@protonmail.com>"]
edition = "2018"
description = "An emerge frontend with extra features."
homepage = "https://github.com/Phate6660/pkg"
license-file = "LICENSE"

[[bin]]
name = "pkg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gentoolkit = []

[dependencies]
clap = "2.33.0"
glob = "0.3.0"
sedregex = "0.2.4"
term = "0.6.1"